# SegyIO.jl

./: .gitignore  .nojekyll  Project.toml  README.md  bp_scan_tutorial.html  bp_scan_tutorial.out.ipynb  index.html  index.ipynb  pyproject.toml  read.html  read.ipynb  robots.txt  scan.html  scan.ipynb  search.json  sitemap.xml  write.html  write.ipynb
benchmarks/: scan_benchmark.py
docs/: _quarto.yml  index.qmd  objects.json  read.qmd  scan.qmd  write.qmd
docs/reference/: index.qmd  (+1 more)
notebooks/: bp_scan_tutorial.ipynb  plotting_example.ipynb  read_write_tutorial.ipynb
pysegy/: __init__.py  ibm.py  plotting.py  read.py  scan.py  types.py  write.py
python/: ibm.py  read.py  types.py  write.py
reference/: BinaryFileHeader.html  BinaryFileHeader.ipynb  BinaryTraceHeader.html  BinaryTraceHeader.ipynb  FileHeader.html  FileHeader.ipynb  SegyScan.html  SegyScan.ipynb  SeisBlock.html  SeisBlock.ipynb  ShotRecord.html  ShotRecord.ipynb  compare_shots.html  compare_shots.ipynb  index.html  index.ipynb  load_scan.html  load_scan.ipynb  plot_fslice.html  plot_fslice.ipynb  plot_sdata.html  plot_sdata.ipynb  plot_simage.html  plot_simage.ipynb  plot_velocity.html  plot_velocity.ipynb  pysegy.html  pysegy.ipynb  save_scan.html  save_scan.ipynb  segy_read.html  segy_read.ipynb  segy_scan.html  segy_scan.ipynb  segy_write.html  segy_write.ipynb  wiggle_plot.html  wiggle_plot.ipynb
test/: runtests.jl  test_utils.jl
tutorial/: bp_scan_tutorial.html  bp_scan_tutorial.out.ipynb  index.html  index.ipynb  plotting_example.html  plotting_example.out.ipynb  read_write_tutorial.html  (+1 more)
(+14 files in other folders)
